Fix weird border in navbar on mobile.

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -117,6 +117,10 @@ a {
     border: 0px;
 }
 
+.navbar-header {
+    height: 50px;
+}
+
 .nav li a,
 .nav .open a {
     background-color: Transparent;
